fix issues with tree view wrong color

--- a/OmniDB/OmniDB_app/static/OmniDB_app/scss/omnidb.scss
+++ b/OmniDB/OmniDB_app/static/OmniDB_app/scss/omnidb.scss
@@ -1959,6 +1959,11 @@ a[href="https://github.com/dalibo/pev2"]{
   }
 }
 
+a:not([href]):not([tabindex]){
+  color: inherit;
+  text-decoration: none;
+}
+
 @import 'interface-icon';
 @import 'node-icon';
 @import 'themes/dark';
